# SQLVerse

./: main.py  pyproject.toml  requirements.txt  test_mongo.py
sqlverse-backend/: .env  local_connections.db
sqlverse-backend/api/routes/: connection.py  query.py
sqlverse-backend/app/: main.py
sqlverse-backend/app/core/: config.py
sqlverse-backend/db/: mongodb.py
sqlverse-backend/models/: mongo_model.py
sqlverse-backend/schemas/: connection_schema.py  query_schema.py
sqlverse-backend/services/: agent_service.py  encryption_service.py  sql_factory.py  sql_gaurd.py
sqlverse-frontend/: build_log.txt  package-lock.json  package.json  tailwind.config.js
sqlverse-frontend/src/: App.js  index.css
sqlverse-frontend/src/components/: GlassCard.jsx  Navbar.jsx
sqlverse-frontend/src/pages/: ConnectionPage.jsx  Dashboard.jsx  LandingPage.jsx
sqlverse-frontend/src/services/: api.js
